--- a/MyApps/MyApps/DetailPage.xaml
+++ b/MyApps/MyApps/DetailPage.xaml
@@ -25,14 +25,34 @@
                 <Label Text="Rate" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
                 <Label  x:Name="rate" Text="{Binding rate}" FontFamily="Times New Roman" FontSize="12" LineBreakMode="WordWrap" XAlign="Center" />
                 <BoxView HeightRequest="1" WidthRequest="150" HorizontalOptions="Center" BackgroundColor="Gray" />
-                <Label Text="Address" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
-                <!--<StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                    <Image Source="marker1.png"/>
-                    <Label x:Name="street" Text="{Binding address.street}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                    <Label x:Name="city" Text="{Binding address.city}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                    <Label x:Name="country" Text="{Binding address.country}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                    <Label x:Name="zipCode" Text="{Binding address.zipCode}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                </StackLayout>-->
+              <Label Text="Address" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
+              <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                <Image Source="marker1.png">
+                  <Image.GestureRecognizers>
+                    <TapGestureRecognizer x:Name="tapImage" NumberOfTapsRequired="1" />
+                  </Image.GestureRecognizers>
+                </Image>
+                <Label x:Name="street" Text="{Binding restaurant.address.street}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                  <Label.GestureRecognizers>
+                    <TapGestureRecognizer x:Name="tapstreet" NumberOfTapsRequired="1" />
+                  </Label.GestureRecognizers>
+                </Label>
+                <Label x:Name="city" Text="{Binding restaurant.address.city}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                  <Label.GestureRecognizers>
+                    <TapGestureRecognizer x:Name="tapcity" NumberOfTapsRequired="1" />
+                  </Label.GestureRecognizers>
+                </Label>
+                <Label x:Name="country" Text="{Binding restaurant.address.country}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                  <Label.GestureRecognizers>
+                    <TapGestureRecognizer x:Name="tapcountry" NumberOfTapsRequired="1" />
+                  </Label.GestureRecognizers>
+                </Label>
+                <Label x:Name="zipCode" Text="{Binding restaurant.address.zipCode}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                  <Label.GestureRecognizers>
+                    <TapGestureRecognizer x:Name="tapcode" NumberOfTapsRequired="1" />
+                  </Label.GestureRecognizers>
+                </Label>
+              </StackLayout>
 
             </StackLayout>
             
@@ -100,7 +120,7 @@
             </Grid>
         </StackLayout>
         <StackLayout Orientation="Horizontal"  HorizontalOptions="FillAndExpand" BackgroundColor="Transparent" Spacing="0" Padding="10,0,10,0" VerticalOptions="EndAndExpand" >
-      <Button Text="Commander" TextColor="White" BackgroundColor="#00B0CD" BorderColor="Black" BorderRadius="15" BorderWidth="2" HeightRequest="40" WidthRequest="250" HorizontalOptions="CenterAndExpand" />
+      <Button Text="Commander" TextColor="White" Clicked="command" BackgroundColor="#00B0CD" BorderColor="Black" BorderRadius="15" BorderWidth="2" HeightRequest="40" WidthRequest="250" HorizontalOptions="CenterAndExpand" />
       
 
     </StackLayout>
