--- a/MyApps/MyApps/RestaurantDetails.xaml
+++ b/MyApps/MyApps/RestaurantDetails.xaml
@@ -18,14 +18,30 @@
                       <TapGestureRecognizer x:Name="tapImage" NumberOfTapsRequired="1" />
                     </Image.GestureRecognizers>
                   </Image>
-                    <Label x:Name="street" Text="{Binding address.street}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                    <Label x:Name="city" Text="{Binding address.city}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                    <Label x:Name="country" Text="{Binding address.country}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
-                    <Label x:Name="zipCode" Text="{Binding address.zipCode}" FontSize="10" TextColor="Black" FontFamily="Times New Roman"/>
+                    <Label x:Name="street" Text="{Binding address.street}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                      <Label.GestureRecognizers>
+                        <TapGestureRecognizer x:Name="tapstreet" NumberOfTapsRequired="1" />
+                      </Label.GestureRecognizers>
+                    </Label>
+                  <Label x:Name="city" Text="{Binding address.city}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                    <Label.GestureRecognizers>
+                      <TapGestureRecognizer x:Name="tapcity" NumberOfTapsRequired="1" />
+                    </Label.GestureRecognizers>
+                  </Label>
+                  <Label x:Name="country" Text="{Binding address.country}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                    <Label.GestureRecognizers>
+                      <TapGestureRecognizer x:Name="tapcountry" NumberOfTapsRequired="1" />
+                    </Label.GestureRecognizers>
+                  </Label>
+                  <Label x:Name="zipCode" Text="{Binding address.zipCode}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                    <Label.GestureRecognizers>
+                      <TapGestureRecognizer x:Name="tapcode" NumberOfTapsRequired="1" />
+                    </Label.GestureRecognizers>
+                  </Label>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
-        <StackLayout Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HeightRequest="32">
+        <StackLayout Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HeightRequest="50" HorizontalOptions="CenterAndExpand">
             <Grid>
                 <Grid.Behaviors>
                     <local:StarBehavior x:Name="starOne" GroupName="myStar"/>
