--- a/MyApps/MyApps/Views/Commandes.xaml
+++ b/MyApps/MyApps/Views/Commandes.xaml
@@ -1,7 +1,52 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
+             xmlns:local="clr-namespace:MyApps.ViewsModel;assembly=MyApps"
+             xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
+             xmlns:v="clr-namespace:MyApps;assembly=MyApps"
              x:Class="MyApps.Views.Commandes"
-             Title = "Commandes">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+             Title = "Commandes"
+            
+             >
+
+  <ContentPage.Content >
+    <AbsoluteLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+      <Image AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" Source="bg.png" Aspect="AspectFill"/>
+      <ScrollView AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 1">
+        <StackLayout  Orientation="Vertical" >
+          <ListView x:Name="RestaurantListView"  HasUnevenRows="True" >
+            <ListView.ItemTemplate>
+              <DataTemplate>
+                <ViewCell>
+                  <StackLayout Spacing="0" Padding="7,7,7,0" >
+                    <StackLayout  Orientation="Horizontal" BackgroundColor="White" >
+                      <Image Source="{Binding Plates.img}"  HeightRequest="80" WidthRequest="80"/>
+                      <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="0,0,5,0">
+                        <Label Text="{Binding Plates.name}" FontSize="14" TextColor="Green"  FontFamily="Times New Roman"/>
+                        <Label  Text="{Binding Plates.restaurant.name}" FontSize="12" FontFamily="Times New Roman" TextColor="Black" />
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="End">
+                          <Label  Text="{Binding Plates.offer.discount}" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" />
+                          <Label Text="%" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" />
+                        </StackLayout>
+                      </StackLayout>
+                    </StackLayout>
+                  </StackLayout>
+                </ViewCell>
+              </DataTemplate>
+            </ListView.ItemTemplate>
+          </ListView>
+
+          
+
+        </StackLayout>
+
+      </ScrollView>
+
+    </AbsoluteLayout>
+
+  </ContentPage.Content>
+
+
+
 </ContentPage>
