--- a/MyApps/MyApps/Views/Offre.xaml
+++ b/MyApps/MyApps/Views/Offre.xaml
@@ -24,8 +24,10 @@
                         <Image Source="{Binding img}"  HeightRequest="80" WidthRequest="80"/> 
                           <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="0,0,5,0">
                            <Label Text="{Binding name}" FontSize="14" TextColor="Green"  FontFamily="Times New Roman"/>
+                            <Label  Text="{Binding restaurant.name}" FontSize="12" FontFamily="Times New Roman" TextColor="Black" /> 
                             <StackLayout Orientation="Horizontal" HorizontalOptions="End">
-                                <Label Text="{Binding discount}" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
+                              <Label Text="-" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
+                              <Label  Text="50" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
                                 <Label Text="%" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" />
                             </StackLayout>  
                             </StackLayout>
