--- a/MyApps/MyApps/Views/Offre.xaml
+++ b/MyApps/MyApps/Views/Offre.xaml
@@ -21,14 +21,17 @@
                   <ViewCell>
                     <StackLayout Spacing="0" Padding="7,7,7,0" >
                       <StackLayout  Orientation="Horizontal" BackgroundColor="White" >
-                        <Image Source="{Binding img}"  HeightRequest="80" WidthRequest="80"/> 
+                        <Image Source="{Binding Plate.img}"  HeightRequest="80" WidthRequest="80"/> 
                           <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Padding="0,0,5,0">
-                           <Label Text="{Binding name}" FontSize="14" TextColor="Green"  FontFamily="Times New Roman"/>
-                            <Label  Text="{Binding restaurant.name}" FontSize="12" FontFamily="Times New Roman" TextColor="Black" /> 
+                           <Label Text="{Binding Plate.name}" FontSize="14" TextColor="Green"  FontFamily="Times New Roman"/>
+                           
+                            <Label Text="{Binding Timing.begin }" FontSize="12" TextColor="Black"  FontFamily="Times New Roman"/>
+                            <Label Text="{Binding Timing.end}" FontSize="12" TextColor="Black"  FontFamily="Times New Roman"/>
+                            
                             <StackLayout Orientation="Horizontal" HorizontalOptions="End">
-                              <Label Text="-" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
-                              <Label  Text="50" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
-                                <Label Text="%" FontSize="14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" />
+                              <Label Text="-"  Font="Bold,14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
+                              <Label  Text="{Binding discount}" Font="Bold,14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" /> 
+                                <Label Text="%" Font="Bold,14" FontFamily="Times New Roman" TextColor="Red" XAlign="End" />
                             </StackLayout>  
                             </StackLayout>
                       </StackLayout>
