--- a/MyApps/MyApps/DetailPage.xaml
+++ b/MyApps/MyApps/DetailPage.xaml
@@ -8,22 +8,21 @@
   
   <StackLayout BackgroundColor="White">
     <StackLayout BackgroundColor="White" Padding="5,5,5,5">
-      <Image x:Name="image" Source="{Binding img}" Aspect="AspectFill" />
+      <Image x:Name="image" Source="{Binding Plate.img}" Aspect="AspectFill" />
             <StackLayout HorizontalOptions="FillAndExpand">
-                <Label  x:Name="name" Text="{Binding name}" FontFamily="Times New Roman" TextColor="Green" FontSize="16" LineBreakMode="WordWrap" XAlign="Center" />
+                <Label  x:Name="name" Text="{Binding Plate.name}" FontFamily="Times New Roman" TextColor="Green" FontSize="16" LineBreakMode="WordWrap" XAlign="Center" />
                 <BoxView HeightRequest="1" WidthRequest="150" HorizontalOptions="Center" BackgroundColor="Gray" />
-                <Label Text="Description" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
-               
-                <Label x:Name="description" Text="{Binding description}" FontFamily="Times New Roman" FontSize="12" LineBreakMode="WordWrap" XAlign="Center" />
+                <Label Text="Description" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />              
+                <Label x:Name="description" Text="{Binding Plate.description}" FontFamily="Times New Roman" FontSize="12" LineBreakMode="WordWrap" XAlign="Center" />
                 <BoxView HeightRequest="1" WidthRequest="150" HorizontalOptions="Center" BackgroundColor="Gray" />
                 <Label Text="Price" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                    <Label  x:Name="price" Text="{Binding price}" FontFamily="Times New Roman" FontSize="12" TextColor="Red" LineBreakMode="WordWrap" XAlign="Center" />
+                    <Label  x:Name="price" Text="{Binding Plate.price}" FontFamily="Times New Roman" FontSize="12" TextColor="Red" LineBreakMode="WordWrap" XAlign="Center" />
                     <Label Text="DA" FontFamily="Times New Roman" FontSize="12" TextColor="Red" LineBreakMode="WordWrap"  />
                 </StackLayout>
                 <BoxView HeightRequest="1" WidthRequest="150" HorizontalOptions="Center" BackgroundColor="Gray" />
                 <Label Text="Rate" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
-                <Label  x:Name="rate" Text="{Binding rate}" FontFamily="Times New Roman" FontSize="12" LineBreakMode="WordWrap" XAlign="Center" />
+                <Label  x:Name="rate" Text="{Binding Plate.rate}" FontFamily="Times New Roman" FontSize="12" LineBreakMode="WordWrap" XAlign="Center" />
                 <BoxView HeightRequest="1" WidthRequest="150" HorizontalOptions="Center" BackgroundColor="Gray" />
               <Label Text="Address" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
               <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
@@ -32,28 +31,30 @@
                     <TapGestureRecognizer x:Name="tapImage" NumberOfTapsRequired="1" />
                   </Image.GestureRecognizers>
                 </Image>
-                <Label x:Name="street" Text="{Binding restaurant.address.street}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                <Label x:Name="street" Text="{Binding Plate.restaurant.address.street}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
                   <Label.GestureRecognizers>
                     <TapGestureRecognizer x:Name="tapstreet" NumberOfTapsRequired="1" />
                   </Label.GestureRecognizers>
                 </Label>
-                <Label x:Name="city" Text="{Binding restaurant.address.city}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                <Label x:Name="city" Text="{Binding Plate.restaurant.address.city}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
                   <Label.GestureRecognizers>
                     <TapGestureRecognizer x:Name="tapcity" NumberOfTapsRequired="1" />
                   </Label.GestureRecognizers>
                 </Label>
-                <Label x:Name="country" Text="{Binding restaurant.address.country}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                <Label x:Name="country" Text="{Binding Plate.restaurant.address.country}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
                   <Label.GestureRecognizers>
                     <TapGestureRecognizer x:Name="tapcountry" NumberOfTapsRequired="1" />
                   </Label.GestureRecognizers>
                 </Label>
-                <Label x:Name="zipCode" Text="{Binding restaurant.address.zipCode}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
+                <Label x:Name="zipCode" Text="{Binding Plate.restaurant.address.zipCode}" FontSize="10" TextColor="Black" FontFamily="Times New Roman">
                   <Label.GestureRecognizers>
                     <TapGestureRecognizer x:Name="tapcode" NumberOfTapsRequired="1" />
                   </Label.GestureRecognizers>
                 </Label>
               </StackLayout>
-
+              <BoxView HeightRequest="1" WidthRequest="150" HorizontalOptions="Center" BackgroundColor="Gray" />
+              <Label Text="Restaurant" FontFamily="Times New Roman" FontSize="14" TextColor="Teal" XAlign="Center" />
+              <Label x:Name="Restaurant" Text="{Binding Plate.restaurant.name}" FontFamily="Times New Roman" FontSize="12" LineBreakMode="WordWrap" XAlign="Center" />
             </StackLayout>
             
     </StackLayout>
